RESOLVED FIXED13130
REGRESSION: Sometimes a frame resizer keeps following the mouse after mouseup
https://bugs.webkit.org/show_bug.cgi?id=13130
Summary REGRESSION: Sometimes a frame resizer keeps following the mouse after mouseup
mitz
Reported 2007-03-20 07:06:45 PDT
When resizing a frame in a frameset, it is possible for the resizer to keep tracking the mouse after being released, especially if the content of the frames is complex. I have a patch.
Attachments
Patch (1.35 KB, patch)
2007-03-20 07:11 PDT, mitz
sullivan: review+
mitz
Comment 1 2007-03-20 07:11:14 PDT
John Sullivan
Comment 2 2007-03-20 07:15:49 PDT
Comment on attachment 13717 [details] Patch Nice.
Mark Rowe (bdash)
Comment 3 2007-03-21 00:36:53 PDT
Landed in r20359.
Note You need to log in before you can comment on or make changes to this bug.