2007-03-21  Mitz Pettel  <mitz@webkit.org>

Reviewed by John Sullivan.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13130
          REGRESSION: Sometimes a frame resizer keeps following the mouse after mouseup

        * rendering/RenderFrameSet.cpp:
        (WebCore::RenderFrameSet::userResize): Reordered the code to allow resizing
        to be terminated by a mouseup event regardless of whether the frameset needs
        layout.


Canonical link: https://commits.webkit.org/17142@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20359 268f45cc-cd09-0410-ab3c-d52691b4dbfc